Add corrections generating and linked to ebook version

--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -38,9 +38,9 @@ resource_version <- "20230627-144735-3da88508"
 In this chapter I describe an application of Bayesian spatio-temporal statistics to small-area estimation of HIV risk group proportions.
 This work was conducted in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
 I developed the statistical model, building upon an earlier version of the analysis conducted by Kathryn Risher.
-The results are presented in @howes2023spatio.
-Kathryn has also created a spreadsheet tool using the estimates available from `https://hivtools.unaids.org/pse/`.
-This tool is now being used by countries, and continues to be developed.
+The model and results for 13 countries are presented in @howes2023spatio.
+Kathryn has also used the estimates to create a spreadsheet tool ([`https://hivtools.unaids.org/pse/`](`https://hivtools.unaids.org/pse/`)) for use in national HIV response planning.
+The tool continues to be updated with inclusion of more countries to the analysis, and extension of the methodology, including to additional risk groups.
 Code for the analysis in this chapter is available from [`https://github.com/athowes/multi-agyw`](https://github.com/athowes/multi-agyw).
 
 ## Background
@@ -49,12 +49,17 @@ In SSA, adolescent girls and young women (AGYW) aged 15-29 are a demographic gro
 Though AGYW are only 28% of the population, they comprise 44% of new infections [@unaids2021update].
 HIV incidence for AGYW is 2.4 times higher than for similarly aged males.
 The social and biological reasons for this disparity include structural vulnerabilities and power imbalances, age patterns of sexual mixing, younger age at first sex, and increased susceptibility to HIV infection.
-On this basis, AGYW have been identified as a priority population for HIV prevention services, and significant investments have been made in prevention programming [@saul2018dreams; @global2018measurement].
+On this basis, AGYW have been identified as a priority population for HIV prevention services, and significant investments, such as the DREAMS partnership [@saul2018dreams], have been made in prevention programming [@global2018measurement].
 
 The Global AIDS Strategy 2021-2026 [@unaids2021global] was adopted by the United Nations (UN) General Assembly in June 2021.
-It proposed stratifying HIV prevention packages to AGYW based on 1) local population-level HIV incidence and 2) individual-level sexual risk behaviour.
+It proposed stratifying HIV prevention packages to AGYW based on
+
+1. local population-level HIV incidence, and
+2. individual-level sexual risk behaviour.
+
 Risk of acquiring HIV depends on both factors.
-As such, prioritisation of prevention services is more efficient if both are taken into account (Figure \@ref(fig:risk-grid)).
+As such, prioritisation of prevention services is more efficient if both factors are taken into account.
+I illustrate this stylistically in Figure \@ref(fig:risk-grid).
 The strategy encourages programmes to define targets for the proportion of AGYW to be reached with a range of interventions.
 Implementation of the strategy by national HIV programmes and stakeholders requires data on the population size and HIV incidence in each risk group by location.
 
@@ -65,6 +70,8 @@ knitr::include_graphics("figures/multi-agyw/risk-grid.png")
 ```
 
 ## Data
+
+### Behavioural data from household surveys
 
 ```{r results='hide', warning=FALSE, message=FALSE}
 available_surveys <- readr::read_csv(paste0("resources/multi-agyw/", resource_version, "/depends/available-surveys.csv"))
@@ -143,34 +150,35 @@ number_of_surveys %>%
 | None       | Not sexually active | 0.0 |
 | Low        | One cohabiting sexual partner | 1.0 (baseline) |
 | High       | Non-regular or multiple partner(s) | 1.72 |
-| Very High  | Reporting transactional sex (later adjusted to correspond to FSW) | 3.0-25.0 (varies depending on local HIV incidence) |
+| Very High  | Reporting transactional sex (later adjusted to correspond to FSW) | 3.0-25.0 (varied depending on local HIV incidence) |
 
 Table: (\#tab:risk-groups) HIV risk groups and HIV incidence rate ratios relative to AGYW with one cohabiting sexual partner.
-The incidence rate ratio for women with non-regular or multiple sexual partner(s) was derived from analysis of longitudinal data [@slaymaker2020croi].
-Among FSW, the incidence rate ratio (25.0, 13.0, 9.0, 6.0, 3.0) depended on the level of HIV incidence among the general population (<0.1\%, 0.1-0.3\%, 0.3-1.0\%, 1.0-3.0\%, >3.0\%), such that higher local HIV incidence in the general population corresponds to a lower incidence rate ratio for FSW.
+The incidence rate ratio for women with non-regular or multiple sexual partner(s) was derived from analysis of longitudinal data by @slaymaker2020croi.
+Among FSW, the incidence rate ratio (25.0, 13.0, 9.0, 6.0, 3.0) depended on the level of HIV incidence among the general population (<0.1\%, 0.1-0.3\%, 0.3-1.0\%, 1.0-3.0\%, >3.0\%), such that higher local HIV incidence in the general population corresponded to a lower incidence rate ratio for FSW.
 These estimates were derived by UNAIDS based on patterns of relative HIV prevalence among FSW compared to general population prevalence.
 
-(ref:available-surveys) Surveys conducted 1999-2018 that were used in the analysis by year, survey type, sample size, and whether the survey included a specific question about transactional sex.
+(ref:available-surveys) Surveys conducted 1999-2018 that were used in the analysis by year, survey type (AIDS Indicator Surveys [AIS], Demographic and Health Surveys [DHS], the Botswana AIDS Impact Survey 2013 [BAIS], and Population-based HIV Impact Assessment [PHIA] surveys), sample size, and whether the survey included a specific question about transactional sex.
 
 ```{r available-surveys, fig.cap="(ref:available-surveys)"}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/available-surveys.png"))
 ```
 
-I used household survey data from 13 countries identified by the GFATM as priority countries for implementation of AGYW HIV prevention: Botswana, Cameroon, Kenya, Lesotho, Malawi, Mozambique, Namibia, South Africa, Eswatini, Tanzania, Uganda, Zambia and Zimbabwe.
-Surveys conducted in these countries between 1999 and 2018 in which women were interviewed about their sexual behaviour and sufficient geographic information was available to locate survey clusters to health districts were included.
+I used household survey data from 13 countries identified by the GFATM as priority countries for implementation of AGYW HIV prevention.
+These countries were Botswana, Cameroon, Kenya, Lesotho, Malawi, Mozambique, Namibia, South Africa, Eswatini, Tanzania, Uganda, Zambia and Zimbabwe.
+Surveys conducted in these countries between 1999 and 2018 in which both women were interviewed about their sexual behaviour and sufficient geographic information was available to locate survey clusters to health districts were included.
 There were `r total_surveys` suitable surveys (Figure \@ref(fig:available-surveys)), with a total sample size of `r comma(agyw_surveyed)` women aged 15-29 years.
 Of the respondents, `r comma(agyw_surveyed_age$Y015_019)` were aged 15-19 years, `r comma(agyw_surveyed_age$Y020_024)` were aged 20-24 years, and `r comma(agyw_surveyed_age$Y025_029)` were aged 25-29 years.
 The median number of surveys per country was four, ranging from one in Botswana and South Africa to six in Uganda.
-Included surveys comprise Demographic and Health Surveys (DHS), AIDS Indicator Surveys (AIS), Population-based HIV Impact Assessment (PHIA) surveys, and the Botswana AIDS Impact Survey 2013 (BAIS).
 
 For each survey, respondents were classified into one of four behavioural risk groups according to reported sexual risk behaviour in the past 12 months.
-These risk groups were (Table \@ref(tab:risk-groups)):
+These risk groups were:
 
 1. Not sexually active
 2. One cohabiting sexual partner
 3. Non-regular or multiple sexual partner(s), and
 4. Reporting transactional sex.
 
+The HIV incidence rate ratio was assumed to vary by risk group (Table \@ref(tab:risk-groups)).
 In the case of inconsistent responses, women were categorised according to the highest risk group they fell into, ensuring that the categories were mutually exclusive.
 Exact survey questions varied slightly across survey types and between survey phases.
 Questions captured information about whether the respondent had been sexually active in the past twelve months, and if so how with many partners.
@@ -181,21 +189,23 @@ Full survey questions used are provided in Appendix \@ref(survey-questions).
 Some surveys included a specific question asking if the respondent had received or given money or gifts for sex in the past twelve months.
 In these surveys, 2.64\% of women reported transactional sex.
 In surveys without such a question, women almost never (0.01\%) answered that one of their three most recent partners was a sex work client.
-As a result of this incomparability, it was not not appropriate to include surveys without a specific transactional sex question when estimating the proportion of the population who engaged in transactional sex.
+This incomparability made it inappropriate to include surveys without a specific transactional sex question when estimating the proportion of the population who engaged in transactional sex.
 Of the total `r total_surveys` surveys included in the analysis, `r length(giftsvar_surveys)` had a specific transactional sex question, with a total sample size of `r comma(agyw_surveyed_giftsvar - giftsvar_Y025_029_overcount)` (`r comma(agyw_surveyed_giftsvar_age$Y015_019)` aged 15-19 years, `r comma(agyw_surveyed_giftsvar_age$Y020_024)` aged 20-24 years, and `r comma(agyw_surveyed_giftsvar_age$Y025_029 - giftsvar_Y025_029_overcount)` aged 25-29 years.
-There were `r length(giftsvar_exclude_Y025_029)` DHS surveys which excluded women 25-29 from the transactional sex survey question.
+The sample size for women aged 25-29 is smaller beccause there were `r length(giftsvar_exclude_Y025_029)` DHS surveys which excluded women 25-29 from the transactional sex survey question.
 
-I used estimates of population, PLHIV and new HIV infections stratified by district and age group from HIV estimates published by UNAIDS that were developed using the Naomi model [@eaton2021naomi].
-The administrative area hierarchy and geographic boundaries I used correspond to those used for health service planning by countries.
-Exceptions are Cameroon and Kenya, where I conducted analysis one level higher at the department and county levels, respectively.
+### Other data
+
+As well as the household survey behavioural data, I used estimates of population, PLHIV and new HIV infections stratified by district and age group from HIV estimates published by UNAIDS that were developed using the Naomi model [@eaton2021naomi].
 I used the most recent 2022 estimates for all countries, apart from Mozambique where, due to data accuracy concerns, I used the 2021 estimates (in which the Cabo Delgado province is excluded due to disruption by conflict).
+I used administrative area hierarchy and geographic boundaries corresponding to those used for health service planning by countries.
+Exceptions are Cameroon and Kenya, where I conducted analyses one level higher at the department and county levels, respectively.
 
 ## Model for risk group proportions
 
-I took a two-stage modelling approach to estimate the four risk group proportions.
+Owing to incomparability across surveys, I took a two-stage modelling approach to estimate the four risk group proportions.
 Let the four risk groups be indexed by $k \in \{1, 2, 3, 4\}$, and denote being in either the third or fourth risk group as $k = 3^{+}$.
-First, using all the surveys, I used a spatio-temporal multinomial logistic regression model (Section \@ref(st-multinomial)) to estimate the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
-Then, using only those surveys with a specific transactional sex question, I fit a spatial logistic regression model (Section \@ref(s-logistic)) to estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively.
+First, using all the surveys, I used a spatio-temporal multinomial logistic regression model to estimate the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
+Then, using only those surveys with a specific transactional sex question, I fit a spatial logistic regression model to estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively.
 
 ### Spatio-temporal multinomial logistic regression {#st-multinomial}
 
@@ -212,7 +222,7 @@ df_3p1_subnational <- readr::read_csv(paste0("resources/multi-agyw/", resource_v
 n_district <- length(unique(df_3p1_subnational$area_id))
 n_year <- length(1999:2018)
 n_age <- length(unique(df_3p1_subnational$age_group))
-n_group <- length(unique(df_3p1_subnational$indicator))
+n_group <- length(unique(df_3p1_subnational$indicator)) - 1
 ```
 
 A standard multinomial logistic regression model [e.g. @gelman2013bayesian] is specified by
@@ -221,13 +231,16 @@ A standard multinomial logistic regression model [e.g. @gelman2013bayesian] is s
     \log \left( \frac{p_{itak}}{p_{ita1}} \right) &= \eta_{itak}, \quad k = 2, 3^{+},
 \end{align}
 where the number in risk group $k$ is $y_{itak}$, the fixed sample size is $m_{ita} = \sum_{k = 1}^{3^{+}} y_{itak}$, and $k = 1$ is chosen as the baseline category.
-This model is not an LGM.
-I used the multinomial-Poisson transformation to perform inference using the INLA [@rue2009approximate] algorithm via the `R-INLA` package [@martins2013bayesian].
-MCMC would be intractable for the model, defined over `r n_district` districts, `r n_year` years, `r n_age` age groups, and `r n_group` risk groups.
+This model is not an LGM because each observation $y_{itak}$ for $k \in \{1, 2, 3^{+}\}$ depends on multiple structured additive predictors $\{\eta_{itak}, k = 1, 2, 3^{+}\}$.
+
+To recast this model as an LGM, I used the multinomial-Poisson transformation.
+This modification allowed inference to be performed using the INLA [@rue2009approximate] algorithm via the `R-INLA` package [@martins2013bayesian].
+INLA is likely to be the most accurate inference method available because the model is too large for MCMC to be intractable.
+Specifically, the spatio-temporal multinomial logistic regression model is defined over `r n_district` districts, `r n_year` years, `r n_age` age groups, and `r n_group` risk groups.
 
 #### The multinomial-Poisson transformation
 
-The multinomial-Poisson transformation reframes a given multinomial logistic regression model as an equivalent Poisson log-linear model.
+The multinomial-Poisson transformation [@baker1994multinomial] reframes a given multinomial logistic regression model as an equivalent Poisson log-linear model.
 The equivalent model is of the form
 \begin{align}
     y_{itak} &\sim \text{Poisson}(\kappa_{itak}), (\#eq:poisson1) \\
@@ -235,7 +248,7 @@ The equivalent model is of the form
 \end{align}
 The basis of the transformation is that conditional on their sum Poisson counts are jointly multinomially distributed [@mccullagh1989generalized] as follows
 \begin{equation}
-    \mathbf{y}_{ita} \, | \, m_{ita} \sim \text{Multinomial} \left( m_{ita}; \frac{\kappa_{ita1}}{\kappa_{ita}}, \ldots, \frac{\kappa_{ita3^{+}}}{\kappa_{ita}} \right),
+    \mathbf{y}_{ita} \, | \, m_{ita} \sim \text{Multinomial} \left( m_{ita}; \frac{\kappa_{ita1}}{\kappa_{ita}}, \ldots, \frac{\kappa_{ita3^{+}}}{\kappa_{ita}} \right), (\#eq:multi)
 \end{equation}
 where $\kappa_{ita} = \sum_{k = 1}^{3^{+}} \kappa_{itak}$.
 Category probabilities may then be obtained using the softmax function
@@ -244,9 +257,9 @@ Category probabilities may then be obtained using the softmax function
 \end{equation}
 Under the equivalent model, the sample sizes $m_{ita}$ are treated as random rather than fixed such that
 \begin{equation}
-m_{ita} = \sum_k y_{itak} \sim \text{Poisson} \left( \sum_k \kappa_{itak} \right) = \text{Poisson} \left( \kappa_{ita} \right).
+m_{ita} = \sum_k y_{itak} \sim \text{Poisson} \left( \sum_k \kappa_{itak} \right) = \text{Poisson} \left( \kappa_{ita} \right). (\#eq:mpoisson)
 \end{equation}
-The joint distribution of $p(\mathbf{y}_{ita}, m_{ita}) = p(\mathbf{y}_{ita} \, | \, m_{ita})p(m_{ita})$ is then
+Using Equations \@ref(eq:multi) and \@ref(eq:mpoisson), the joint distribution of $p(\mathbf{y}_{ita}, m_{ita}) = p(\mathbf{y}_{ita} \, | \, m_{ita})p(m_{ita})$ is then
 \begin{align}
 p(\mathbf{y}_{ita}, m_{ita}) &= \exp(-\kappa_{ita}) \frac{(\kappa_{ita})^{m_{ita}}}{m_{ita}!} \times \frac{m_{ita}!}{\prod_k y_{itak}!} \prod_k \left( \frac{\kappa_{itak}}{\kappa_{ita}} \right)^{y_{itak}} \\
 &= \prod_k \left( \frac{\exp(-\kappa_{itak}) \left( \kappa_{itak} \right)^{y_{itak}}}{y_{itak}!} \right) \\
