--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Thesis corrections for "Methods and applications of Bayesian spatio-temporal statistics for HIV surveillance"
+title: Thesis corrections for "Bayesian spatio-temporal methods for small-area estimation of HIV indicators"
 subtitle: |
   Adam Howes (`ath19@ic.ac.uk`)
 output:
