--- a/corrections/cover.Rmd
+++ b/corrections/cover.Rmd
@@ -21,7 +21,7 @@ Email: ath19@ic.ac.uk
 
 Dear examiners,
 
-Thank you for taking the time to read my thesis.
+Thank you for taking the time to read my thesis "Bayesian spatio-temporal methods for small-area estimation of HIV indicators".
 I attach my response to the corrections.
 
 With kind regards,
