--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -3,6 +3,7 @@
 This is the e-book version of my PhD thesis, submitted to Imperial College London in accordance with the requirements of the degree of Doctor of Philosophy in Modern Statistics and Statistical Machine Learning.
 You can alternatively view the [PDF version](https://athowes.github.io/thesis/main.pdf).
 The associated GitHub repository for this thesis is [`athowes/thesis`](https://github.com/athowes/thesis).
+You can also look at the [corrections](https://athowes.github.io/thesis/correct.pdf) for this thesis.
 
 ## Acknowledgments {-}
 
